Further edits of my own to news summary items.

--- a/2025/2025-04-20-wir.md
+++ b/2025/2025-04-20-wir.md
@@ -38,48 +38,17 @@ As far as I'm concerned, yes, that's easily enough to call it a crash.
 
 ### Five Things: April 13-19, 2025
 
-The week's most important headlines in emerging tech:
+The week's most important tech headlines:
 
 - **Troubling signs on AI-powered disinformation:** Researchers say a sprawling Russian disinformation network, dubbed "Pravda," has been [seeding](https://www.france24.com/en/live-news/20250310-russian-disinformation-infects-ai-chatbots-researchers-warn) popular large language models with pro-Kremlin propaganda... Meanwhile, OpenAI has [revised its AI safety policy](https://fortune.com/2025/04/16/openai-safety-framework-manipulation-deception-critical-risk/), dropping pre-release testing requirements for persuasive or manipulative capabilities. The company is also [prototyping](https://decrypt.co/315020/openai-plans-x-like-social-platform-amid-ongoing-rift-musk) a social network that could compete with Twitter/X, according to the Verge's Kylie Robison and Alex Heath.
 
-- **Investor sentiment on crypto's ruling duo remains bullish despite turbulence on Wall Street.**  Google searches for the terms "Bitcoin" and "Ethereum" have [surged to 2025 highs](https://www.theblock.co/post/351053/retail-curiosity-is-rekindled-as-google-search-volume-for-bitcoin-and-ethereum-jumps), reflecting growing public interest in crypto... Meanwhile, new research from CoinDesk Indeces suggests instutitions are showing [an increasing preference](https://www.coindesk.com/coindesk-indices/2025/04/16/bitcoin-leads-a-fundamental-shift-in-the-crypto-market) for bitcoin over any alternatives, driving the token's market share higher. So-called "bitcoin dominance" in the global token market now stands at 63%, its highest level since early 2021, according to [CoinMarketCap](https://coinmarketcap.com/).
+- **Big Tech is facing greater antitrust scrutiny at home.** A U.S. district judge ruled that Google's dominance in digital advertisimg [violates the Sherman Antitrust Act](https://www.wsj.com/business/media/judge-rules-google-operates-illegal-ad-monopoly-1d955ed4), harming advertisers and consumers. The company plans to appeal the decision... Separately, an [antitrust trial began](https://www.wsj.com/tech/meta-fights-to-keep-instagram-and-whatsapp-as-antitrust-trial-begins-8c6911d9) for Facebook parent Meta in Washington. The U.S. Federal Trade Commission alleges that the giant has monopolized the social media market and should be broken up, with Meta's acquisitions of Instagram and WhatsApp being a key point of contention.
 
-- **But worry is mounting about the long-term quantum threat to Bitcoin.** Project 11 announced a new $85,000 bounty to test if quantum computers can break the Bitcoin network's encryption...
+- **Investor sentiment on crypto's ruling duopoly** remains bullish despite turbulence on Wall Street.  Google searches for the terms "Bitcoin" and "Ethereum" have [surged to 2025 highs](https://www.theblock.co/post/351053/retail-curiosity-is-rekindled-as-google-search-volume-for-bitcoin-and-ethereum-jumps), reflecting growing public interest in crypto... Meanwhile, new research from CoinDesk Indeces suggests instutitions are showing [an increasing preference](https://www.coindesk.com/coindesk-indices/2025/04/16/bitcoin-leads-a-fundamental-shift-in-the-crypto-market) for bitcoin over any alternatives, driving the token's market share higher. So-called "bitcoin dominance" in the global token market now stands at 63%, its highest level since early 2021, according to [CoinMarketCap](https://coinmarketcap.com/).
 
+- **Add crypto markets to the long list** of stuff the governments of China and America are on opposite sides of these days. [Reuters reports](https://www.theblock.co/post/350955/china-government-selling-seized-crypto) that Chinese local governments have been selling seized tokens via private companies despite an ongoing crypto trading ban in mainland China, according to Reuters. In the U.S., the Trump administration is exploring ways to [buy more]((https://www.msn.com/en-us/politics/government/trump-to-use-tariff-revenue-to-buy-more-bitcoin/ar-AA1CWdHZ)) bitcoin to hold in a national reserve. That could include using tariff revenue to buy tokens.
 
-The challenge focuses on a simplified version of Bitcoin's elliptic curve cryptography, and experts warn that a quantum computer could potentially crack the encryption, allowing hackers to steal funds. This highlights the need for Bitcoin developers to prepare for a quantum future and develop new, quantum-resistant solutions to protect user funds. ([Decrypt](https://decrypt.co/315288/bitcoin-quantum-computing-bounty-encryption)) | *Quantum Computing TKTK:* *Scientists Observe Elusive Quantum Phenomenon* Researchers have successfully observed a new quantum phase, called a superradiant phase transition (SRPT), which was first predicted over 50 years ago. This phenomenon, resulting from the coordinated fluctuation of two groups of quantum particles, could have significant implications for quantum computing, sensors, and communication technology. The discovery could lead to more stable and precise quantum measurements and computations. ([LiveScience](https://www.livescience.com/technology/computing/scientists-observe-new-quantum-phase-that-could-have-major-implications-for-quantum-computing)) | *Quantum Computing Threatens Bitcoin Security*: Project 11 has offered an $85,000 bounty to test whether quantum computers can break Bitcoin's encryption. The challenge focuses on a simplified version of Bitcoin's cryptographic protocols. <!-- -->
-
-
-
-
-- **Ripple Launches Asia-Focused XRP Fund**: Ripple has partnered with HashKey Capital to launch the HashKey XRP Tracker Fund, allowing Asian investors to track XRP's performance. The fund is expected to expand institutional adoption of Ripple's cryptocurrency. <!-- --> | *Stellar Blockchain Targets Real-World Assets*: Stellar aims to hold $3 billion in real-world asset (RWA) value and facilitate $110 billion in RWA transaction volume by the end of 2025. The plan includes new partnerships and expanded use cases. <!-- --> | *Stellar Blockchain Expansion.* The Stellar blockchain aims to hold $3 billion in real-world asset (RWA) value and power $110 billion in RWA volume by the end of 2025. This goal is part of new partnerships with companies like Paxos, Ondo, Etherfuse, and SG Forge, which will help facilitate tokenization of existing financial assets. This expansion is a significant increase from the $290 million in RWA on the Stellar network at the end of December 2024. ([CoinDesk](https://www.coindesk.com/business/2025/04/17/stellar-sees-usd3b-of-real-world-assets-coming-on-chain-in-2025)) | *Ripple Partners with HashKey Capital*: Ripple has backed the launch of the HashKey XRP Tracker Fund, a new investment fund in Asia designed to track the performance of XRP. The fund will be available to professional investors and allows for cash or in-kind subscription and monthly redemption of shares. This collaboration is seen as a push into the Asian market for Ripple and its XRP cryptocurrency. ([The Block](https://www.theblock.co/post/351224/ripple-backs-new-xrp-tracker-fund-by-hashkey-capital-signaling-institutional-push-in-asia)) | Stablecoin giant Tether has invested $32 million in Bitcoin miner Bitdeer, despite the sector facing challenges. Bitcoin miners have collectively lost 25% of their value in March, with many companies struggling to recover their costs due to soaring mining difficulty. Tether's investment in Bitdeer is part of its growing interest in the Bitcoin mining space. ([Decrypt](https://decrypt.co/315305/tether-buys-bitcoin-miner-bitdeer-stock))
-
-- **Exchanges:** Kraken, a crypto exchange giant, has laid off hundreds of staff members across all areas of the business over the past several months. This move is part of the company's efforts to streamline operations and improve its earnings before interest, tax, and amortization (EBITA) ahead of a potential public listing in the U.S. Despite the layoffs, Kraken claims its business is thriving and continues to launch new products and drive revenue growth. ([CoinDesk](https://www.coindesk.com/business/2025/04/17/kraken-sheds-hundreds-of-jobs-to-streamline-business-ahead-of-ipo-sources-say)) | *Coinbase Improves Solana Support* Coinbase has upgraded its infrastructure to better support the Solana ecosystem, addressing user complaints of withdrawal and depositing issues. The improvements include faster transaction processing times, improved liquidity, and better failsafes, resulting in a five-fold improvement in block processing throughput. This upgrade aims to meet the increasing demand for Solana transactions as the cryptocurrency scales in the future.([The Block](https://www.theblock.co/post/351197/coinbase-improves-solana-support-following-user-complaints-increases-transaction-throughput-five-fold))
-
-
-### The Week Ahead
-
-Some upcoming stories worth watching:
-
-- Meta antitrust trial continues: | *Google Faces Antitrust Scrutiny*: A U.S. district judge has ruled that Google's dominance in ad exchanges and server markets violates the Sherman Antitrust Act. This decision underscores the company's alleged harm to advertisers and consumers. <!-- --> | **Meta Platforms**, the owner of Facebook, Instagram, and WhatsApp, is facing an antitrust trial with the Federal Trade Commission (FTC). The FTC alleges that Meta has monopolized the social media market and should be broken up, with the company's acquisition of Instagram and WhatsApp being a key point of contention. The trial, which is expected to last eight weeks, could shape the future of antitrust enforcement and have significant implications for the tech industry. ([Wall Street Journal](https://www.wsj.com/tech/meta-fights-to-keep-instagram-and-whatsapp-as-antitrust-trial-begins-8c6911d9?st=CzM5F5&reflink=desktopwebshare_permalink)) **Google Faces Antitrust Ruling**: A U.S. district judge ruled that Google's dominance in ad exchanges and server markets violates the Sherman Antitrust Act, harming advertisers and consumers. The company plans to appeal the decision. The ruling is part of a larger trend of antitrust cases against major tech companies, including Facebook and Amazon. ([Wall Street Journal](https://www.wsj.com/business/media/judge-rules-google-operates-illegal-ad-monopoly-1d955ed4?st=toZKpR&reflink=desktopwebshare_permalink))
-
-- Tariffs and Martial Law Concerns:** - https://arstechnica.com/tech-policy/2025/04/trumps-tariffs-could-cost-semiconductor-industry-1-billion-industry-fears/
-
-- https://apnews.com/article/tariffs-trump-pharmaceutical-semiconductor-chips-65b528a3ae455b197a26f61f847063ef
-
-- https://www.reuters.com/technology/us-tariffs-may-cost-chip-equipment-makers-more-than-1-billion-industry-estimates-2025-04-15/
-
-
- President Donald Trump is approaching a deadline to report on whether to invoke the Insurrection Act and declare martial law. Trump has taken actions to subvert the military to meet this end, including installing a combative defense secretary and replacing the Joint Chiefs of Staff chairman. The article explores a hypothetical scenario where Trump declares martial law, leading to a chain of events that could result in the military arresting the president and suspending civil government. ([San Francisco Chronicle](https://www.sfchronicle.com/opinion/openforum/article/trump-insurrection-act-april-20-20269810.php)) | EU may be using Big Tech antitrust as a bargaining chip on tariffs. https://www.wsj.com/tech/eu-meta-apple-punishment-delay-0453d7a0?st=k6w5qz&reflink=desktopwebshare_permalink
-
-- **The governments of China and America are taking opposite approaches regarding their own crypto portfolios.** China's Local Governments Sell Seized Crypto Amid Trading Ban** Despite a ban on cryptocurrency trading in mainland China, local governments have been selling confiscated crypto assets to replenish public coffers. This practice, which involves private companies helping to dispose of seized assets, has raised concerns about opaque processes and potential corruption. According to Reuters, one company has facilitated the sale of over 3 billion yuan worth of cryptocurrencies in offshore markets since 2018. ([The Block](https://www.theblock.co/post/350955/china-government-selling-seized-crypto)) **US Government's Crypto Holdings** The Trump administration is exploring ways to increase the US government's Bitcoin holdings, including using funds from revalued gold certificates and import tariffs. According to Bo Hines, Executive Director of the President's Council of Advisers on Digital Assets, the administration aims to maximize every legal and fiscal lever to expand the country's crypto holdings. This move could be supported by the reintroduced Bitcoin Act of 2025. ([Cryptopolitan](https://www.msn.com/en-us/politics/government/trump-to-use-tariff-revenue-to-buy-more-bitcoin/ar-AA1CWdHZ)) **Trump Family's Crypto Ventures** The Trump family has invested in various crypto projects, including nonfungible tokens, decentralized finance, memecoins, ETFs, stablecoins, and Bitcoin mining. These ventures have generated significant paper gains, approaching $1 billion, despite market fluctuations. The family's involvement in crypto has raised concerns about potential conflicts of interest given the administration's influence over regulations. ([Bloomberg](https://finance.yahoo.com/news/trump-family-going-crypto-projects-140000972.html))
-
-- De-dollarization? <!-- Find JPM remark on it being plausible. --> Coinbase analysts warn of a potential "crypto winter" due to the ongoing trade war and decreased investor confidence. Bitcoin's price is currently above its 200-day moving average, but has shown volatility in recent weeks. ([Decrypt](https://decrypt.co/315089/bitcoin-steadies-but-coinbase-analyst-sees-crypto-winter-tariffs))
-
-- **Stablecoin Market Growth Predicted** A research report by Standard Chartered predicts that the stablecoin market could grow to $2 trillion by the end of 2028, driven by the expected passage of the Genius Act in the U.S. This legislation would further legitimize the stablecoin industry, potentially leading to a 10-fold increase in stablecoin supply. The increased demand for dollar-denominated stablecoin reserves could support U.S. dollar hegemony. ([CoinDesk](https://www.coindesk.com/markets/2025/04/15/stablecoin-market-could-grow-to-usd2t-by-end-2028-standard-chartered))
-
-- **DOJ Signals Shift in Crypto Enforcement**: A recent U.S. Justice Department memo indicates a shift away from aggressive crypto enforcement under the Biden administration. The memo suggests a more measured approach moving forward. <!-- -->
-
+- **A new research report from the investment bank Standard Chartered** proects that the stablecoin market could grow to $2 trillion by the end of 2028, driven by the expected passage of the Genius Act in the U.S. That scenario would represent a nearly tenfold increase from the stablecoin market's current valuation. ([CoinDesk](https://www.coindesk.com/markets/2025/04/15/stablecoin-market-could-grow-to-usd2t-by-end-2028-standard-chartered))
 
 ### Odds & Ends
 
