Draft subheads from Copilot and Leo/Llama 3.1

--- a/2025/2025-04-20-wir.md
+++ b/2025/2025-04-20-wir.md
@@ -1,3 +1,29 @@
+<!--
+
+Asked Copilot and Leo for help with the subhead...
+
+#Prompt
+
+For the attached draft of my newsletter, could you please draft five potential sub-headlines?
+
+#Copilot Response
+
+**"From Market Shock to Market Crash: Parsing the Debate"**
+**"When the Bears Roar: 2025's Market Plunge in Perspective"**
+**"Crash Course: Was This Week’s Market Decline a True ‘Crash’?"**
+**"Defining a Market Crash: Perspectives from the Past and Present"**
+**"Shockwaves on Wall Street: How the S&P’s Rapid Decline Stacks Up"**
+
+#Leo Response
+
+**Market Mayhem: Tariff-Driven Plunge Sparks Debate on Wikipedia**
+ _Five Things: April 20, 2025_
+**AI Safety Concerns: OpenAI's Revised Policy Raises Red Flags**
+**Crypto Markets Defy Turbulence: Bitcoin Dominance Hits 2025 High**
+**Tech Tussle: Big Tech Faces Antitrust Scrutiny in Washington**
+
+-->
+
 # Yes, that was a market crash. Duh.
 ## tktk <!-- Get AI help drafting subhead. -->
 
