--- a/2025/2025-04-20-wir.md
+++ b/2025/2025-04-20-wir.md
@@ -1,72 +1,5 @@
-<!--
-
-Asked ChatGPT to use subheadlines drafted by other bots to write a final one...
-
-#Prompt
-
-Hi, Assistant. Below are 9 draft subheads for my newsletter. Could you please use the best elements of them to create a final subhead for me?
-
-- From Market Shock to Market Crash: Parsing the Debate
-- When the Bears Roar: 2025's Market Plunge in Perspective
-- Crash Course: Was This Week’s Market Decline a True ‘Crash’?
-- Defining a Market Crash: Perspectives from the Past and Present
-- Shockwaves on Wall Street: How the S&P’s Rapid Decline Stacks Up
-- Market Mayhem: Tariff-Driven Plunge Sparks Debate on Wikipedia
-- AI Safety Concerns: OpenAI's Revised Policy Raises Red Flags
-- Crypto Markets Defy Turbulence: Bitcoin Dominance Hits 2025 High
-- Tech Tussle: Big Tech Faces Antitrust Scrutiny in Washington
-
-#Response
-
-Thanks for the solid batch of drafts — there's a lot of strong language and energy here. I pulled from the most compelling elements: the "crash vs. decline" debate, the speed and magnitude of the market move, and the wider implications.
-
-Here’s a final subhead suggestion that synthesizes the best of your list:
-
-> **Crash or Just Chaos? Parsing the Plunge That Shook the S&P, Wikipedia, and Wall Street’s Nerves**
-
-Would you like variations that are punchier, more formal, or more tech-news oriented?
-
-#Prompt
-
-Yes. That would be helpful, please.
-
-#Response
-
-Awesome — here are some tailored variations based on different tones and angles:
-
----
-
-### **🎯 Punchier Options**
-1. **Crash. Chaos. Controversy. What Just Hit Wall Street?**
-2. **12% in 4 Days: Yeah, We’re Calling It a Crash.**
-3. **Market Crash? Depends Who You Ask — and What They’re Editing.**
-4. **Fast, Furious, and Wikipedia-Worthy: The S&P Takes a Dive.**
-
----
-
-### **🧑‍💼 More Formal Options**
-1. **Assessing the April Decline: Defining a Crash in Historical Context**
-2. **The Market Plunge of 2025: Rapid Decline or Historic Crash?**
-3. **Economic Shockwaves: Unpacking the S&P’s Steep Slide and Its Implications**
-4. **From Headlines to History Books: Debating the Definition of a Market Crash**
-
----
-
-### **🧠 Tech-News Oriented**
-1. **Was It a Crash? AI, Wiki Wars, and Wall Street’s Wild Week**
-2. **Tariffs, Tumbling Markets, and the AI Echo Chamber**
-3. **Defining ‘Crash’ in the Age of AI Editors and Algorithmic Panic**
-4. **When the Market Tanks, Even Wikipedia Feels It**
-
----
-
-Let me know if you want me to riff on a specific combo of tones — like punchy *and* techy, or formal *with* a wink.
-
-
--->
-
 # Yes, that was a market crash. Duh.
-## tktk <!-- Get AI help drafting subhead. -->
+## Wikipedia is still unpacking the S&P’s steep slide.
 
 ![A bear in the woods](https://w3w.news/img/jessica-weiller-bear-1920.jpg)
 *Photo by Jessica Weiller via Unsplash*
