--- a/2025/2025-04-20-wir.md
+++ b/2025/2025-04-20-wir.md
@@ -1,5 +1,5 @@
 # Yes, that was a market crash. Duh.
-## Wikipedia is still unpacking the S&P’s steep slide.
+## Wikipedia is still unpacking how to accurately describe the S&P’s slide.
 
 ![A bear in the woods](https://w3w.news/img/jessica-weiller-bear-1920.jpg)
 *Photo by Jessica Weiller via Unsplash*
@@ -8,7 +8,7 @@
 
 - _**A big thank-you to the paid subscribers** who help the w3w newsletter bring readers the latest news about Bitcoin, Ethereum, AI, and other emerging tech. I'm glad to maintain a free distribution tier as well, to make this information available more widely. But if you're able, please do consider upgrading to a paid plan [on Substack](https://w3wnews.substack.com/subscribe)._ 😊
 
-- _**Leo/Llama 3.1, Copilot, ChatGPT, and NotebookLM** were used for research, drafting, and editing of the newsletter this week. Final edit was all me. For fuller details, see this edition's [commit history](https://github.com/peteramckay/w3wnewsletter/commits/master/2025/2025-04-20-wir.md) on GitHub._
+- _**Leo/Llama 3.1, Copilot, ChatGPT, and NotebookLM** were used for research, early drafs, and copyediting the newsletter this week. Final edit is all me, though. For fuller detail, see this edition's [commit history](https://github.com/peteramckay/w3wnewsletter/commits/master/2025/2025-04-20-wir.md) on GitHub._
 
 <hr>
 
@@ -16,7 +16,7 @@
 
 So far, "crash" has been carrying the day in the pertinent market-related [Wikipedia entry](https://en.wikipedia.org/wiki/2025_stock_market_crash). But as with everything in the community-maintained encyclopedia, that could change in the future.
 
-Harrison notes some interesting dynamics at play:
+Harrison notes some intriguing dynamics at play:
 
 <blockquote>
 
@@ -28,13 +28,13 @@ Harrison notes some interesting dynamics at play:
 
 **For what it's worth,** speaking as someone who covered multiple market crashes over 11 years at the Wall Street Journal, we used to have a rule of thumb: A "crash" is traditionally a single-day decline of 10% or more.
 
-That said, the rule wasn't absolute. Market drops that were very rapid and historic, but didn't necessarily meet the "10% in one day" criterion, were also sometimes referred to as "crashes." The decline of the Nasdaq Composite Index beginning in March 2000 when the first dotcom bubble burst fit the latter standard, for example. Hence the Journal has frequently referred to it as a "crash" ever since.
+That said, the rule wasn't absolute. Market drops that were very rapid and historic, but didn't necessarily meet the "10% in one day" criterion, were also sometimes referred to as "crashes." The decline of the Nasdaq Composite Index beginning in March 2000, when the first dotcom bubble burst, fit the latter standard, for example. Hence the Journal has frequently referred to it as a "crash" ever since.
 
-This month's decline in the S&P 500 clearly seems to fit a similar bill, in my opinion. No, the index hasn't had a one-day 10% drop. But from April 3, when trading began after President Trump announced across-the-board tariffs on imports into the U.S., until the market's recent low on April 8, the S&P [fell 12%](https://www.wsj.com/finance/will-the-last-investor-to-leave-america-please-turn-out-the-lights-cdf727b4?st=FckdHs&reflink=desktopwebshare_permalink).
+This month's decline in the S&P 500 clearly seems to fit a similar bill, in my opinion. No, the index hasn't had a one-day 10% drop. But the S&P did [plunge 12%](https://www.wsj.com/finance/will-the-last-investor-to-leave-america-please-turn-out-the-lights-cdf727b4?st=FckdHs&reflink=desktopwebshare_permalink) from April 3-8, in the immediate aftermath of President Trump announcing across-the-board tariffs on imports into the U.S.
 
 A drop of that magnitude in just four trading days is plenty rapid [by historical standards](https://www.fool.com/investing/2025/04/19/sp-500-12th-biggest-4-day-decline-75-years-history/). And it was driven in this case by a seismic change in economic policy that reverses decades of American preference to make trade more open over time, not less.
 
-As far as I'm concerned, yes, that's easily enough to call it a crash.  
+As far as I'm concerned, yes, that's easily enough to call it a crash.
 
 ### Five Things: April 13-19, 2025
 
@@ -42,13 +42,13 @@ The week's most important tech headlines:
 
 - **Troubling signs on AI-powered disinformation:** Researchers say a sprawling Russian disinformation network, dubbed "Pravda," has been [seeding](https://www.france24.com/en/live-news/20250310-russian-disinformation-infects-ai-chatbots-researchers-warn) popular large language models with pro-Kremlin propaganda... Meanwhile, OpenAI has [revised its AI safety policy](https://fortune.com/2025/04/16/openai-safety-framework-manipulation-deception-critical-risk/), dropping pre-release testing requirements for persuasive or manipulative capabilities. The company is also [prototyping](https://decrypt.co/315020/openai-plans-x-like-social-platform-amid-ongoing-rift-musk) a social network that could compete with Twitter/X, according to the Verge's Kylie Robison and Alex Heath.
 
-- **Big Tech is facing greater antitrust scrutiny at home.** A U.S. district judge ruled that Google's dominance in digital advertisimg [violates the Sherman Antitrust Act](https://www.wsj.com/business/media/judge-rules-google-operates-illegal-ad-monopoly-1d955ed4), harming advertisers and consumers. The company plans to appeal the decision... Separately, an [antitrust trial began](https://www.wsj.com/tech/meta-fights-to-keep-instagram-and-whatsapp-as-antitrust-trial-begins-8c6911d9) for Facebook parent Meta in Washington. The U.S. Federal Trade Commission alleges that the giant has monopolized the social media market and should be broken up, with Meta's acquisitions of Instagram and WhatsApp being a key point of contention.
+- **Big Tech is facing greater antitrust scrutiny at home.** A U.S. district judge ruled that Google's dominance in digital advertisimg [violates the Sherman Antitrust Act](https://www.wsj.com/business/media/judge-rules-google-operates-illegal-ad-monopoly-1d955ed4), harming advertisers and consumers. The search giant plans to appeal the decision... Separately, an [antitrust trial began](https://www.wsj.com/tech/meta-fights-to-keep-instagram-and-whatsapp-as-antitrust-trial-begins-8c6911d9) for Facebook parent Meta in Washington. The U.S. Federal Trade Commission alleges that Meta has monopolized the social media market and should be broken up, with its acquisitions of Instagram and WhatsApp being a key point of contention.
 
-- **Investor sentiment on crypto's ruling duopoly** remains bullish despite turbulence on Wall Street.  Google searches for the terms "Bitcoin" and "Ethereum" have [surged to 2025 highs](https://www.theblock.co/post/351053/retail-curiosity-is-rekindled-as-google-search-volume-for-bitcoin-and-ethereum-jumps), reflecting growing public interest in crypto... Meanwhile, new research from CoinDesk Indeces suggests instutitions are showing [an increasing preference](https://www.coindesk.com/coindesk-indices/2025/04/16/bitcoin-leads-a-fundamental-shift-in-the-crypto-market) for bitcoin over any alternatives, driving the token's market share higher. So-called "bitcoin dominance" in the global token market now stands at 63%, its highest level since early 2021, according to [CoinMarketCap](https://coinmarketcap.com/).
+- **Investor sentiment on crypto's ruling duopoly** remains bullish despite turbulence on Wall Street.  Google searches for the terms "Bitcoin" and "Ethereum" have [surged to 2025 highs](https://www.theblock.co/post/351053/retail-curiosity-is-rekindled-as-google-search-volume-for-bitcoin-and-ethereum-jumps), reflecting growing public interest in crypto... Meanwhile, new research from CoinDesk Indices suggests instutitions are showing [an increasing preference](https://www.coindesk.com/coindesk-indices/2025/04/16/bitcoin-leads-a-fundamental-shift-in-the-crypto-market) for bitcoin over any alternatives, driving the token's market share higher. So-called "bitcoin dominance" in the global token market now stands at 63%, its highest level since early 2021, according to [CoinMarketCap](https://coinmarketcap.com/).
 
-- **Add crypto markets to the long list** of stuff the governments of China and America are on opposite sides of these days. [Reuters reports](https://www.theblock.co/post/350955/china-government-selling-seized-crypto) that Chinese local governments have been selling seized tokens via private companies despite an ongoing crypto trading ban in mainland China, according to Reuters. In the U.S., the Trump administration is exploring ways to [buy more]((https://www.msn.com/en-us/politics/government/trump-to-use-tariff-revenue-to-buy-more-bitcoin/ar-AA1CWdHZ)) bitcoin to hold in a national reserve. That could include using tariff revenue to buy tokens.
+- **Add crypto markets to the long list** of stuff the governments of China and America are on opposite sides of these days. [Reuters reports](https://www.theblock.co/post/350955/china-government-selling-seized-crypto) that Chinese local governments have been selling seized tokens via private companies despite an ongoing crypto trading ban in mainland China. In the U.S., the Trump administration is exploring ways to [buy more]((https://www.msn.com/en-us/politics/government/trump-to-use-tariff-revenue-to-buy-more-bitcoin/ar-AA1CWdHZ)) bitcoin to hold in a national reserve. That could include using tariff revenue to buy tokens.
 
-- **A new research report from the investment bank Standard Chartered** proects that the stablecoin market could grow to $2 trillion by the end of 2028, driven by the expected passage of the Genius Act in the U.S. That scenario would represent a nearly tenfold increase from the stablecoin market's current valuation. ([CoinDesk](https://www.coindesk.com/markets/2025/04/15/stablecoin-market-could-grow-to-usd2t-by-end-2028-standard-chartered))
+- **New research from the investment bank Standard Chartered** projects that the stablecoin market could grow to $2 trillion by the end of 2028, driven by the expected passage of the Genius Act in the U.S. That scenario would represent a nearly tenfold increase from the stablecoin market's current valuation. ([CoinDesk](https://www.coindesk.com/markets/2025/04/15/stablecoin-market-could-grow-to-usd2t-by-end-2028-standard-chartered))
 
 ### Odds & Ends
 
@@ -56,6 +56,6 @@ The week's most important tech headlines:
 
 - **Scientists have captured the first confirmed images** of an elusive species of deep-sea squid in its natural habitat. They used a remote vehicle to photograph the animal swimming 600 meters deep (1,968 feet) in the South Atlantic. ([CNN](https://www.cnn.com/2025/04/16/science/colossal-squid-footage/index.html))
 
-- **Today's two-holiday special:** Easter this year fell on 4/20, cannabis smokers' very unofficial holiday, for the first time since 2014. But it won't happen again until 2087. ([USA Today](https://www.usatoday.com/story/news/2025/04/03/when-easter-sunday-420-same-day-list-years-dates/82771933007/))
+- **Today's two-holiday special:** Easter this year fell on 4/20, cannabis smokers' very unofficial holiday, for the first time since 2014. But the overlap won't happen again until 2087. ([USA Today](https://www.usatoday.com/story/news/2025/04/03/when-easter-sunday-420-same-day-list-years-dates/82771933007/))
 
 _**That's it for now. Thanks for reading the newsletter today! Best wishes for a healthy and productive week ahead.**_
