Fixing some typos myself

--- a/2025/2025-04-20-wir.md
+++ b/2025/2025-04-20-wir.md
@@ -8,7 +8,7 @@
 
 - _**A big thank-you to the paid subscribers** who help the w3w newsletter bring readers the latest news about Bitcoin, Ethereum, AI, and other emerging tech. I'm glad to maintain a free distribution tier as well, to make this information available more widely. But if you're able, please do consider upgrading to a paid plan [on Substack](https://w3wnews.substack.com/subscribe)._ 😊
 
-- _**Leo/Llama 3.1, Copilot, ChatGPT, and NotebookLM** were used for research, early drafs, and copyediting the newsletter this week. Final edit is all me, though. For fuller detail, see this edition's [commit history](https://github.com/peteramckay/w3wnewsletter/commits/master/2025/2025-04-20-wir.md) on GitHub._
+- _**Leo/Llama 3.1, Copilot, ChatGPT, and NotebookLM** were used for research, early drafts, and copyediting the newsletter this week. Final edit is all me. For fuller detail, see this edition's [commit history](https://github.com/peteramckay/w3wnewsletter/commits/master/2025/2025-04-20-wir.md) on GitHub._
 
 <hr>
 
@@ -44,7 +44,7 @@ The week's most important tech headlines:
 
 - **Big Tech is facing greater antitrust scrutiny at home.** A U.S. district judge ruled that Google's dominance in digital advertisimg [violates the Sherman Antitrust Act](https://www.wsj.com/business/media/judge-rules-google-operates-illegal-ad-monopoly-1d955ed4), harming advertisers and consumers. The search giant plans to appeal the decision... Separately, an [antitrust trial began](https://www.wsj.com/tech/meta-fights-to-keep-instagram-and-whatsapp-as-antitrust-trial-begins-8c6911d9) for Facebook parent Meta in Washington. The U.S. Federal Trade Commission alleges that Meta has monopolized the social media market and should be broken up, with its acquisitions of Instagram and WhatsApp being a key point of contention.
 
-- **Investor sentiment on crypto's ruling duopoly** remains bullish despite turbulence on Wall Street.  Google searches for the terms "Bitcoin" and "Ethereum" have [surged to 2025 highs](https://www.theblock.co/post/351053/retail-curiosity-is-rekindled-as-google-search-volume-for-bitcoin-and-ethereum-jumps), reflecting growing public interest in crypto... Meanwhile, new research from CoinDesk Indices suggests instutitions are showing [an increasing preference](https://www.coindesk.com/coindesk-indices/2025/04/16/bitcoin-leads-a-fundamental-shift-in-the-crypto-market) for bitcoin over any alternatives, driving the token's market share higher. So-called "bitcoin dominance" in the global token market now stands at 63%, its highest level since early 2021, according to [CoinMarketCap](https://coinmarketcap.com/).
+- **Investor sentiment on crypto's ruling duopoly** remains bullish despite turbulence on Wall Street.  Google searches for the terms "Bitcoin" and "Ethereum" have [surged to 2025 highs](https://www.theblock.co/post/351053/retail-curiosity-is-rekindled-as-google-search-volume-for-bitcoin-and-ethereum-jumps), reflecting growing public interest in crypto... Meanwhile, new research from CoinDesk Indices suggests instititions are showing [an increasing preference](https://www.coindesk.com/coindesk-indices/2025/04/16/bitcoin-leads-a-fundamental-shift-in-the-crypto-market) for bitcoin over any alternatives, driving the token's market share higher. So-called "bitcoin dominance" in the global token market now stands at 63%, its highest level since early 2021, according to [CoinMarketCap](https://coinmarketcap.com/).
 
 - **Add crypto markets to the long list** of stuff the governments of China and America are on opposite sides of these days. [Reuters reports](https://www.theblock.co/post/350955/china-government-selling-seized-crypto) that Chinese local governments have been selling seized tokens via private companies despite an ongoing crypto trading ban in mainland China. In the U.S., the Trump administration is exploring ways to [buy more]((https://www.msn.com/en-us/politics/government/trump-to-use-tariff-revenue-to-buy-more-bitcoin/ar-AA1CWdHZ)) bitcoin to hold in a national reserve. That could include using tariff revenue to buy tokens.
 
