Tweaking subhead myself.

--- a/2025/2025-04-20-wir.md
+++ b/2025/2025-04-20-wir.md
@@ -1,5 +1,5 @@
 # Yes, that was a market crash. Duh.
-## Wikipedia is still unpacking how to accurately describe the S&P’s slide.
+## Wikipedia is still unpacking how to accurately describe the S&P’s slide. This should be an easy call.
 
 ![A bear in the woods](https://w3w.news/img/jessica-weiller-bear-1920.jpg)
 *Photo by Jessica Weiller via Unsplash*
